# autoencoder

./: .gitignore  README.md  data.env  environment.yml  pyproject.toml
src/autoencoder/: ae.py  dataset.py  infer.py  infer_single.py  train.py  transforms.py
