[build-system]
requires = ["setuptools>=58.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autoencoder"
description = "sample autoencoder implementation"
readme = "README.md"
requires-python = ">=3.10.0"
authors = [{ name = "clark", email = "csaben@mail.umw.edu" }]
keywords = []
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
urls = { code = "https://github.com/csaben/autoencoder" }
dependencies = ["python-dotenv"]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = { file = "src/autoencoder/VERSION.txt" }

[project.optional-dependencies]
dev = ["pytest", "black", "flake8", "mypy"]

[tool.setuptools]
zip-safe = true
include-package-data = true

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]
known_first_party = ["autoencoder"]

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_imports = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
check_untyped_defs = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true

[tool.ruff]
select = ["B", "C90", "E", "F", "W"]
ignore = ["E501"]
line-length = 88

